...
        clearsSelectionOnViewWillAppear = true
        
        tableView.register(EventCell.self, forCellReuseIdentifier: Self.reuseIdentifier)
        tableView.tableFooterView = UIView()
        tableView.separatorStyle = .none
        
        tableView.accessibilityIdentifier = "EventsTableView"
    }
    
    private func setupSearchController() {
        searchController.searchResultsUpdater = self
        searchController.obscuresBackgroundDuringPresentation = false
        searchController.searchBar.placeholder = "Search events"
...
